--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
                     <li>Android</li>
                     <li>Blackberry</li>
                     <li>iPhone</li>
-                    <li>Windows Phone</li></ul>
-                    <h1>Mobile Mnufactures</h1>
-                    <ul>
-                        <li>Samsung</li>
-                        <li>Micromax</li>
-                        <li>HTC</li>
-                        <li>Apple</li></ul></div>
+                    <li>Windows Phone</li>
+                </ul>
+                <h1>Mobile Mnufactures</h1>
+                <ul>
+                    <li>Samsung</li>
+                    <li>Micromax</li>
+                    <li>HTC</li>
+                    <li>Apple</li>
+                </ul>
+            </div>
         );
 
         const container=document.getElementById("card");
